--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/header.css" />
   </head>
   <body>
+    <!-- Section Header -->
     <header>
-      <div style="font-weight: bold; color: white; font-size: 1.5rem">
-        Jannier
-      </div>
+      <div class="logo">Jannier</div>
+      <button class="menu-toggle" aria-label="Toggle menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
       <nav>
         <a href="#">Home</a>
         <a href="#services">Services</a>
@@ -24,6 +29,8 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
+
+    <!-- Section Hero -->
     <section class="hero">
       <h1>
         Hello, I'm<br /><span style="color: #fff">a Front end Developer</span>
@@ -90,5 +97,15 @@
       <textarea placeholder="Message"></textarea>
       <button>Stay Connected</button>
     </section>
+
+    <script>
+      const toggle = document.querySelector(".menu-toggle");
+      const nav = document.querySelector("header nav");
+
+      toggle.addEventListener("click", () => {
+        toggle.classList.toggle("active");
+        nav.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
