--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- Section Header -->
-    <header>
+    <header class="container">
       <div class="logo">Jannier</div>
       <button class="menu-toggle" aria-label="Toggle menu">
         <span class="bar"></span>
@@ -32,72 +32,72 @@
 
     <!-- Section Hero -->
     <section class="hero">
-      <h1>
-        Hello, I'm<br /><span style="color: #fff">a Front end Developer</span>
-      </h1>
-      <p>
-        Fond of creating web application designs and bring them to life using
-        code & develop mobile designs
-      </p>
-      <div class="buttons">
-        <button class="btn-primary">Descargar CV</button>
-        <button class="btn-danger">Hablemos</button>
+      <div class="container">
+        <h1>
+          Hello, I'm<br /><span style="color: #fff">a Front end Developer</span>
+        </h1>
+        <p>
+          Fond of creating web application designs and bring them to life using
+          code & develop mobile designs
+        </p>
+        <div class="buttons">
+          <button class="btn-primary">Descargar CV</button>
+          <button class="btn-danger">Hablemos</button>
+        </div>
       </div>
     </section>
-    <section id="skills">
+
+    <!-- Section Skills -->
+    <section class="container" id="skills">
       <h2 class="section-title">Skill-Set</h2>
       <div class="skills">
         <div class="card">
           <h3>Git Version Control</h3>
           <p>
-            A reader will be distracted by the readable content of a page when
-            looking at its layout.
+            Experiencia en el manejo de Git y GitHub para control de versiones,
+            trabajo colaborativo y flujos de desarrollo eficientes.
           </p>
         </div>
         <div class="card">
           <h3>App Design</h3>
           <p>
-            A reader will be distracted by the readable content of a page when
-            looking at its layout.
+            Diseño de interfaces modernas y usables, priorizando la experiencia
+            del usuario y la identidad visual del proyecto.
           </p>
         </div>
         <div class="card">
           <h3>Back-end Development</h3>
           <p>
-            A reader will be distracted by the readable content of a page when
-            looking at its layout.
+            Desarrollo de APIs y servicios escalables, aplicando buenas
+            prácticas de arquitectura.
           </p>
         </div>
         <div class="card">
           <h3>Web Development</h3>
           <p>
-            A reader will be distracted by the readable content of a page when
-            looking at its layout.
-          </p>
-        </div>
-        <div class="card">
-          <h3>Photography</h3>
-          <p>
-            A reader will be distracted by the readable content of a page when
-            looking at its layout.
+            Construcción de sitios y aplicaciones web responsivas, rápidas y
+            optimizadas para cualquier dispositivo.
           </p>
         </div>
         <div class="card">
           <h3>Freelancing</h3>
           <p>
-            A reader will be distracted by the readable content of a page when
-            looking at its layout.
+            Gestión de proyectos de forma independiente, asegurando comunicación
+            clara, cumplimiento de plazos y entrega de calidad.
           </p>
         </div>
       </div>
     </section>
-    <section id="contact" class="contact">
+
+    <!-- Section Contact -->
+    <section id="contact" class="contact container">
       <h2 class="section-title">Connect with me</h2>
       <input type="email" placeholder="Email" />
       <textarea placeholder="Message"></textarea>
       <button>Stay Connected</button>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
     <script>
       const toggle = document.querySelector(".menu-toggle");
       const nav = document.querySelector("header nav");
@@ -105,6 +105,30 @@
       toggle.addEventListener("click", () => {
         toggle.classList.toggle("active");
         nav.classList.toggle("active");
+      });
+
+      tsParticles.load("particles-js", {
+        background: { color: "transparent" },
+        particles: {
+          number: { value: 80 },
+          color: { value: "#ffffff" },
+          shape: { type: "circle" },
+          opacity: { value: 0.5 },
+          size: { value: 3 },
+          links: {
+            enable: true,
+            color: "#ffffff",
+            distance: 150,
+            opacity: 0.4,
+            width: 1,
+          },
+          move: { enable: true, speed: 2 },
+        },
+        interactivity: {
+          events: { onHover: { enable: true, mode: "repulse" } },
+          modes: { repulse: { distance: 100 } },
+        },
+        detectRetina: true,
       });
     </script>
   </body>
