--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         datos en el backend para entregar soluciones completas y escalables.
       </p>
       <div class="buttons">
-        <button class="btn-primary">Descargar CV</button>
-        <button class="btn-danger">Hablemos</button>
+        <button class="button btn-primary">Descargar CV</button>
+        <button class="button btn-danger">Hablemos</button>
       </div>
     </section>
 
@@ -91,34 +91,42 @@
       <div class="portfolio-grid">
         <!-- Card 1 -->
         <div class="portfolio-card">
-          <img src="img/proyecto1.png" alt="Proyecto 1" />
+          <img src="assets/images/inter.png" alt="Proyecto 1" />
           <div class="card-content">
-            <h3>App de Finanzas</h3>
+            <h3>Grupo Interdiseños</h3>
             <p>
               Aplicación web para gestión de gastos y análisis financiero en
               tiempo real.
             </p>
-            <span class="tech">Angular • Node.js • PostgreSQL</span>
+            <span class="tech">Angular - Java • PostgreSQL</span>
             <div class="card-buttons">
-              <a href="#" class="btn-primary">Ver Demo</a>
-              <a href="#" class="btn-outline">Ver Código</a>
+              <a
+                href="https://xn--grupointerdiseos-kub.com/account/signin"
+                target="_blank"
+                class="button btn-primary"
+                >Ver demo</a
+              >
             </div>
           </div>
         </div>
 
         <!-- Card 2 -->
         <div class="portfolio-card">
-          <img src="img/proyecto2.png" alt="Proyecto 2" />
+          <img src="assets/images/recnar.png" alt="Recuperaciones Naranjos" />
           <div class="card-content">
-            <h3>Plataforma Educativa</h3>
+            <h3>Recuperaciones Naranjos</h3>
             <p>
               Plataforma virtual que conecta estudiantes con universidades y
               carreras.
             </p>
-            <span class="tech">React • Express • MongoDB</span>
+            <span class="tech">Angular - Java • PostgreSQL</span>
             <div class="card-buttons">
-              <a href="#" class="btn-primary">Ver Demo</a>
-              <a href="#" class="btn-outline">Ver Código</a>
+              <a
+                href="http://3.132.57.72:8080/#/auth/signin"
+                target="_blank"
+                class="button btn-primary"
+                >Ver demo</a
+              >
             </div>
           </div>
         </div>
@@ -131,7 +139,7 @@
         <h2 class="section-title">Dejame un mensaje</h2>
         <input type="email" placeholder="Email" />
         <textarea placeholder="Mensaje"></textarea>
-        <button>Enviar mensaje</button>
+        <button class="button btn-danger">Enviar mensaje</button>
       </section>
     </div>
 
