--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Section Header -->
     <header class="container">
-      <div class="logo">Jannier</div>
+      <div class="logo">JFG</div>
       <button class="menu-toggle" aria-label="Toggle menu">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -48,7 +48,7 @@
         datos en el backend para entregar soluciones completas y escalables.
       </p>
       <div class="buttons">
-        <button class="button btn-primary">Descargar CV</button>
+        <button class="button btn-primary">Curriculum</button>
         <button class="button btn-danger">Hablemos</button>
       </div>
     </section>
@@ -139,7 +139,7 @@
         <h2 class="section-title">Dejame un mensaje</h2>
         <input type="email" placeholder="Email" />
         <textarea placeholder="Mensaje"></textarea>
-        <button class="button btn-danger">Enviar mensaje</button>
+        <button class="button btn-danger">Enviar</button>
       </section>
     </div>
 
